# vlasov-poisson-solver

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindJansson.cmake
examples/: config.json  config_output.json  config_solitons.json
include/: GridClass.h  MpiClass.h  ParametersClass.h  PhasePointClass.h  SpeciesClass.h  config.h  naming.h
src/: Vlasov-Poisson_Solver_git.cpp
